stateDiagram-v2
  [*] --> Approved: lần đầu / HR upload (auto-enroll)
  [*] --> Pending: self-service gửi ảnh mới
  Pending --> Approved: HR duyệt · apply enrollment · xóa ảnh tạm
  Pending --> Rejected: HR từ chối · giữ ảnh minh chứng
  Approved --> [*]
  Rejected --> [*]
  note right of Pending
    Mặt nhận diện vẫn là mặt cũ
    cho tới khi được duyệt
  end note
